# flutter_forecaster_dev

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_forecaster.podspec
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: flutter_forecaster.dart  main.dart
lib/src/dart/: arima_forecaster.dart  augur_forecaster.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
macos/: flutter_forecaster.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: arima.rs  augurs.rs  mod.rs  utils.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/cmake/: cargokit.cmake
rust_builder/ios/: rust_lib_flutter_arima.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_arima.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
(+12 files in other folders)
