[package]
name = "rust_lib_flutter_arima"
version = "1.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
augurs-prophet = { version = "0.9.0"}
augurs = { version = "0.9.0", features = ["forecaster", "mstl", "ets"] }
rand = "0.8.5"
rand_distr = "0.4.3"
chrono = "0.4.39"
serde_json = "1.0.139"
arima = "0.3"
csv = "1.3.1"
flutter_rust_bridge = "=2.9.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
